<resources>
    <string name="app_name">Ticket to Ride</string>

    <string name="title_activity_game_lobby_test">GameLobbyActivityTest</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Ticket to Ride</string>
    <string name="title_gamelist">Game List</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (required)</string>
    <string name="prompt_confirm_password"> Confirm Password (for registering)</string>
    <string name="prompt_server_ip">Server\'s IP address</string>
    <string name="prompt_server_port">Server\'s port number</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This Username is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--game Lobby-->
    <string name="create_game_button">Create Game</string>
    <string name="join_game_button">Join Game</string>
    <string name="start_game_button">Start Game</string>
    <string name="exit_game_button">Quit Game</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>

    <!--game setup-->
    <string name="setup_travel_question">How Many Countries + States have you visited?</string>
    <string name="setup_travel_answer_hint">5</string>

    <!--map-->
    <!--city names-->
    <string name="city_chicago">Chicago</string>

    <string name="test">TEST</string>

    <!--chat_fragment-->
    <string name="prompt_send_message">Write message here: </string>
    <string name="action_send_message">Send</string>
    <string name="action_cancel_message">Cancel</string>

    <!--turn_menu-->
    <string name="destination_card">Choose Destination Cards</string>
    <string name="train_card">Choose Train Cards</string>
    <string name="claim_route">Claim Route</string>
    <string name="see_other_players">View Players</string>
    <string name="turn_header">Select Turn Action:</string>
    <string name="chat_header">Chat</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="other_players">Other Players</string>
    <string name="chat_menu">Chat</string>
    <string name="game_history">Game History</string>

    <!--claim route pop-up-->
    <string name="confirm_button_label">Confirm</string>
    <string name="claim_route_button_filler_text">Claim Route?</string>

    <!--game_misc-->
    <string name="claim_route_flag_text">Select a route to claim.</string>
    <string name="game_over">Game Over</string>
    <string name="game_over_legend">= Had longest continuous train route</string>

</resources>
