<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/see_other_players_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/other_players"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/see_other_players_other_players"
        android:layout_weight = "8.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.turnmenu.SeeOtherPlayersFragment" />

    <Button
        android:id="@+id/see_other_players_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/see_other_players_header"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/see_other_players_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/see_other_players_header"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:text="@string/ok" />

</RelativeLayout>