<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="700dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/choose_train_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/train_card"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/choose_train_card0"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/choose_train_card1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/choose_train_card2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/choose_train_card3"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/choose_train_card4"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/choose_train_deck"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="5"
            android:text="Deck"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/choose_train_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="12"/>

        <Button
            android:id="@+id/choose_train_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>